--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hairsalon",
+  "name": "React News App",
   "version": "1.0.0",
-  "description": "'Opentable for Hairsalons'",
+  "description": "News Feeder Application with ReactJS",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "classnames": "^2.2.5",
     "gulp-sass": "^2.3.2",
     "jquery": "^3.1.0"
   }
